initial results with random zernike phase image as input

--- a/generate-random-zernikes.ipynb
+++ b/generate-random-zernikes.ipynb
@@ -2,6 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib notebook\n",
+    "import numpy as np\n",
+    "import poppy\n",
+    "import matplotlib.pyplot as plt\n",
+    "import scipy.io as sio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "M = 14; #Max Zernike polynomial\n",
+    "N = 512; #diameter in pixels\n",
+    "\n",
+    "Z = poppy.zernike.zernike_basis(nterms=M+1,npix=N)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = {'Z':Z}\n",
+    "sio.savemat(\"zernike_basis\",d)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
