committing a lot of accumulated work

--- a/Data Generation by RMS.ipynb
+++ b/Data Generation by RMS.ipynb
@@ -9,6 +9,7 @@
     "%matplotlib inline\n",
     "import numpy as np\n",
     "import poppy\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import astropy.units as u\n",
     "from llowfs import generate_wfe_array, simulate_multiple_llowfs\n",
@@ -26,48 +27,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(28, 10)\n",
-      "[[-9.39946684e-08 -9.46784935e-08 -9.56055676e-08]\n",
-      " [-9.34807302e-08 -3.64049124e-08 -9.71848245e-08]\n",
-      " [ 3.12763567e-08 -3.06263721e-08  4.73650032e-08]\n",
-      " [-2.02462475e-08  1.49891418e-08  2.47489550e-08]\n",
-      " [ 1.80928570e-08 -9.15586305e-08  3.54317854e-08]\n",
-      " [ 6.61115765e-08  9.11597123e-08 -2.58937696e-09]\n",
-      " [-1.06732390e-08  2.34654936e-08 -5.80494129e-08]\n",
-      " [ 4.52059717e-08  7.34799390e-08 -1.40833897e-08]\n",
-      " [-9.46151363e-08  8.35192994e-08 -1.09194677e-08]\n",
-      " [-6.35891050e-08  1.29882806e-08  4.04735795e-08]\n",
-      " [ 4.10991089e-08  1.18477099e-08 -3.91057568e-09]\n",
-      " [ 8.53802938e-09  6.75548853e-08 -6.20967421e-08]\n",
-      " [ 5.67624186e-08  8.95298613e-08  7.35097567e-08]\n",
-      " [-6.59931015e-08  6.79773223e-08  6.16281118e-09]\n",
-      " [ 3.15887016e-08 -8.91990223e-08  3.06778281e-08]\n",
-      " [ 1.66377987e-08  1.61688060e-08  6.46100669e-08]\n",
-      " [-9.22139264e-08 -2.32134087e-08  5.73548194e-08]\n",
-      " [-4.93994788e-08  6.60412688e-08  4.37947550e-08]\n",
-      " [ 1.01472817e-08  5.73681977e-08  3.12013344e-08]\n",
-      " [-9.74461316e-08 -3.69032492e-08 -9.98475940e-08]\n",
-      " [-5.71640385e-08  5.50511097e-08 -6.16507267e-08]\n",
-      " [-1.21994582e-08 -9.79637641e-08 -4.64532693e-08]\n",
-      " [-9.86941531e-08 -9.15484724e-08 -5.99037745e-08]\n",
-      " [-4.41284710e-08  7.65753584e-08  9.99678377e-08]\n",
-      " [ 6.42590785e-09  7.16513520e-08  6.11412887e-08]\n",
-      " [ 9.56911168e-08 -8.70299939e-08 -9.01125886e-08]\n",
-      " [ 7.36529697e-08 -4.97218922e-08  2.75464497e-08]\n",
-      " [ 2.47172723e-08 -3.95722245e-08  2.02227724e-08]]\n"
+      "(14, 10)\n",
+      "[[-2.25667816e-08 -1.64434895e-08  7.45198455e-08]\n",
+      " [ 5.09446585e-08  1.78453071e-08 -2.03483085e-08]\n",
+      " [ 6.39991595e-08 -3.20851168e-08  5.15678388e-09]\n",
+      " [-9.81652625e-09  1.00095259e-08  9.80783819e-08]\n",
+      " [-1.54980587e-08 -8.43229990e-08 -9.37383785e-08]\n",
+      " [ 7.62626077e-08  6.10768997e-08 -4.94411618e-08]\n",
+      " [-6.10791838e-08 -7.08079940e-08 -5.36513633e-09]\n",
+      " [-1.58673695e-08  4.50118672e-09 -4.89173320e-08]\n",
+      " [-2.67434652e-08  7.98132028e-08 -5.72535747e-08]\n",
+      " [ 5.73888376e-08 -6.00889450e-08 -4.94576500e-09]\n",
+      " [ 6.70472800e-08  3.29726115e-08 -3.01843569e-11]\n",
+      " [ 9.57746490e-08 -7.00243358e-08  3.02479140e-08]\n",
+      " [ 5.88183946e-08  8.94382164e-09 -1.06461477e-08]\n",
+      " [ 5.44019038e-08 -6.43506282e-08  5.83723323e-08]]\n"
      ]
     }
    ],
    "source": [
     "highest_coeff = 15\n",
-    "bounds = [100e-9,100e-9]*(highest_coeff-1) #piston not included\n",
+    "bounds = [100e-9]*(highest_coeff-1) #piston not included\n",
     "#bounds = [1500e-9,1500e-9,800e-9] #piston not included\n",
     "\n",
     "N = 10 #number of examples\n",
