adding a bunch of changes

--- a/Data Generation Individual Zernikes 2.ipynb
+++ b/Data Generation Individual Zernikes 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,17 +24,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(20,)\n",
-      "(14, 280)\n",
-      "[[ 4.47368421e-08  5.00000000e-08  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00 -5.00000000e-08 -4.47368421e-08]\n",
+      "(40,)\n",
+      "(14, 560)\n",
+      "[[-7.69230769e-09 -2.56410256e-09  2.56410256e-09  7.69230769e-09]\n",
+      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
       " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
       " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
       " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
@@ -52,9 +52,9 @@
    ],
    "source": [
     "highest_coeff = 15\n",
-    "zernike_bound = 50e-9\n",
+    "zernike_bound = 100e-9\n",
     "\n",
-    "nSteps = 20\n",
+    "nSteps = 40\n",
     "coeff_array = np.linspace(-1*zernike_bound,zernike_bound,num=nSteps)\n",
     "print(coeff_array.shape)\n",
     "\n",
@@ -73,11 +73,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_out = 'vortex_50nm_256px_individual_zernikes_def_4_0.hdf5'\n",
+    "file_out = 'fqpm_100nm_128px_individual_zernikes_def_4.hdf5'\n",
     "#size of output images is npix_detector\n",
     "# oversample pads the pupil plane before performing ffts. This gives more accurate simulations of \n",
     "# image plane interactions. oversample=2 is generally too low for this application. \n",
@@ -86,10 +86,10 @@
     "\n",
     "oversample = 4\n",
     "wavelength=632e-9*u.m\n",
-    "coronagraph='vortex'\n",
+    "coronagraph='fqpm'\n",
     "npix_pupil = 512\n",
     "\n",
-    "npix_detector = 256\n",
+    "npix_detector = 128\n",
     "detector_fov = 0.3 #arcsec\n",
     "detector_pixelscale = detector_fov/npix_detector\n",
     "defocus = 4\n"
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
