--- a/Analyze Zernike Distribution.ipynb
+++ b/Analyze Zernike Distribution.ipynb
@@ -849,9 +849,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nn-gen-venv",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "nn-gen-venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -863,7 +863,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
